--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "bits-ui": "^0.21.10",
     "clsx": "^2.1.1",
+    "dexie": "^4.0.7",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
   }
