--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "bits-ui": "^0.21.10",
     "clsx": "^2.1.1",
     "dexie": "^4.0.7",
+    "lucide-svelte": "^0.395.0",
+    "mode-watcher": "^0.3.0",
+    "svelte-sonner": "^0.3.24",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
   }
